@@ -1,3 +1,10 @@
+2008-08-08  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* Makefile.am:
+	Don't install icedtea-javafiles.patch on CVMI builds.
+	Use ICEDTEA_BOOT_DIR and not ECJ_BUILD_OUTPUT_DIR for
+	extra files so --with-icedtea works.
+	
 2008-08-06  Joshua Sumali  <jsumali@redhat.com>
 
 	* acinclude.m4: Don't bother with GCC_OLD here either.
